[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "screencaps"
version = "0.0.0"
authors = [
    {name = "Jake Randolph B Muncada"}
]
description = "A python tool to create screencap thumbnail images from a video file."
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    
]

[project.optional-dependencies]
dev = [
    "build==0.10.0",
    "tox==4.6.4",
    "autopep8==2.0.2",
    "flake8==6.0.0",
    "flake8-docstrings==1.7.0",
    "mypy==1.4.1",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "coverage==7.2.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "screencaps*",
]